css/80_app.css
/* ... */
.form-field-label button {
    flex: 0 0 32px;
    border-left: 1px solid #ccc;
    width: 32px;
    height: 100%;
    border-radius: 0;
    background: #f6f6f6;
}
[dir='rtl'] .form-field-label button {
    border-left: none;
    border-right: 1px solid #ccc;
}
.form-field-label button:hover {
    background: #f1f1f1;
}
.form-field-label .icon {
    opacity: .5;
}

.form-field-label .modified-icon,
.form-field-label .remove-icon {
    display: none;
}
.modified .form-field-label .modified-icon,
.present .form-field-label .remove-icon {
    display: inline-block;
}

/* A `div` element that wraps the bottom section */
.form-field-input-wrap {
    display: flex;
    flex-flow: row nowrap;
    flex: 1 1 100%;
    min-height: 30px;
    border-top: 0;
    border-radius: 0 0 4px 4px;
}
.nowrap .form-field-input-wrap {
    border-radius: 0;
}


.form-field-input-wrap > input,
.form-field-input-wrap > label,
.form-field-input-wrap > textarea,
.form-field-input-wrap > ul.chiplist {
    flex: 1 1 auto;
    min-height: 30px;
    border: 1px solid #ccc;
    border-top: 0;
    border-radius: 0;
    overflow: hidden;
    position: relative;
}
.form-field-input-wrap > textarea {
    height: 65px;
    border-radius: 0 0 4px 4px;
}

/* Buttons inside fields */
.form-field-button {
    flex: 0 0 32px;
    height: 30px;
    width: 32px;
    position: relative;
    background-color: #fff;
    border: 1px solid #ccc;
    border-radius: 0;
    border-top-width: 0;
    border-left-width: 0;
    vertical-align: top;
}
[dir='rtl'] .form-field-button {
    border-left-width: 1px;
    border-right-width: 0;
}
.form-field-button:hover {
    background-color: #f1f1f1;
}
.form-field-button .icon {
    fill: #333;
    opacity: .5;
}


/* round corners of first/last child elements */
.form-field-input-wrap > button:last-of-type {
    border-bottom-right-radius: 4px;
}
[dir='rtl'] .form-field-input-wrap > button:last-of-type {
    border-bottom-left-radius: 4px;
}


/* Field - Access, Cycleway
------------------------------------------------------- */
.form-field-input-access,
.form-field-input-cycleway {
    flex: 1 1 auto;
    display: flex;
    flex-flow: row wrap;
}

/* Field - lists with labeled input items
------------------------------------------------------- */
.form-field ul.labeled-inputs {
    flex: 1 1 auto;
    border: 1px solid #ccc;
    border-top: 0;
    border-radius: 0 0 4px 4px;
    overflow: hidden;
    width: 100%;
}
.form-field ul.labeled-inputs li {
    border-top: 1px solid #ccc;
    display: flex;
    flex-flow: row nowrap;
}
.form-field ul.labeled-inputs li:first-child {
    border-top: 0;
}
.form-field ul.labeled-inputs li > span,
.form-field ul.labeled-inputs li > div {
    flex: 1 1 auto;
    width: 100%;
    border-radius: 0;
}
.form-field ul.labeled-inputs li input {
    border-radius: 0;
    width: 100%;
}
.form-field ul.labeled-inputs li input,
.form-field ul.labeled-inputs li button {
    border-width: 0;
    border-left-width: 1px;
}
[dir='rtl'] .form-field ul.labeled-inputs li input,
[dir='rtl'] .form-field ul.labeled-inputs li button {
    border-left-width: 0;
    border-right-width: 1px;
}


/* Field - Structure
------------------------------------------------------- */
.structure-extras-wrap {
    width: 100%;
    padding: 10px 10px;
    background: #fff;
    border: 1px solid #ccc;
    border-top: 0px;
    border-radius: 0 0 4px 4px;
}
.structure-extras-wrap > ul.labeled-inputs {
    border: 1px solid #ccc;
    border-radius: 4px;
}


/* Field - Combo / Multicombo
------------------------------------------------------- */
.form-field-input-combo > input:only-of-type {
    border-radius: 0 0 4px 4px;
}

.form-field-input-multicombo ul.chiplist {
    padding: 5px 7px 5px 7px;
    background: #fff;
    display: block;
    border-radius: 0 0 4px 4px;
}

.form-field-input-multicombo li.chips {
    background-color: #eff2f7;
    border: 1px solid #ccd5e3;
    line-height: 25px;
    padding: 2px 0px 2px 5px;
}
.form-field-input-multicombo li {
    display: inline-flex;
    flex-flow: row nowrap;
    align-items: center;
    margin: 3px;
    border-radius: 4px;
}

.form-field-input-multicombo a {
    font-family: Arial, Helvetica, sans-serif !important;
    font-size: 16px !important;
    line-height: 22px;
    float: right;
    padding: 0px 5px 0px 5px;
    margin: 0;
    cursor: pointer;
    color: #a6b4ce;
}

.form-field-input-multicombo .input-wrap {
    border: 1px solid #ddd;
    width: 100px;
    height: 31px;
    overflow: hidden;
}
.form-field-input-multicombo input {
    border: none;
    width: 100%;
}

.form-field-input-multicombo input:focus {
    border-radius: 4px !important;
}

.form-field-input-multicombo .full-line-chips li {
    display: block;
}
.form-field-input-multicombo .full-line-chips li:not(:last-child) {
    margin-bottom: 6px;
}
.form-field-input-multicombo .full-line-chips .input-wrap {
    width: auto;
}


/* Field - Text / Numeric
------------------------------------------------------- */
.form-field-input-text > input:only-of-type,
.form-field-input-tel > input:only-of-type,
.form-field-input-email > input:only-of-type,
.form-field-input-url > input:only-of-type {
    border-radius: 0 0 4px 4px;
}
.form-field-input-number > input:only-of-type {
    border-radius: 0 0 0 4px;
}
[dir='rtl'] .form-field-input-number > input:only-of-type {
    border-radius: 0 0 4px 0;
}
.form-field-input-number > button:last-of-type {
    border-radius: 0 0 4px 0;
}
[dir='rtl'] .form-field-input-number > button:last-of-type {
    border-radius: 0 0 0 4px;
}

/* draw the up/down on the buttons */
.form-field-input-number button.decrement::after,
.form-field-input-number button.increment::after {
    content: "";
    height: 0; width: 0;
    position: absolute;
    left: 0; right: 0; bottom: 0; top: 0;
    margin: auto;
}
/* ... */

